2008-02-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* frame.el (frame-notice-user-settings): Distinguish explicit parent-id
	from the auto-generated one.

2008-02-14  Glenn Morris  <rgm@gnu.org>

	* mail/rmail-spam-filter.el (rmail-spam-filter): Let-bind
	message-spam-status.

	* mail/smtpmail.el (password-cache-add): Declare as function.

2008-02-14  Justus Piater <Justus-bulk@Piater.name>  (tiny change)

	* mail/smtpmail.el: Use password-cache.

2008-02-14  Juanma Barranquero  <lekktu@gmail.com>

	* uniquify.el (uniquify-buffer-base-name): New function.
	Suggested by Stefan Monnier <monnier@iro.umontreal.ca>.

	* desktop.el (uniquify-managed): Don't defvar.
	(desktop-buffer-info): Use `uniquify-buffer-base-name', not
	`uniquify-managed'.  Return also the buffer's base name.
	(desktop-save): When saving the buffer info, filter out the base name,
	and save it as buffer name if the buffer is managed by uniquify.
	(uniquify-item-base): Don't declare; not called anymore.

2008-02-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-annotate-find-revision-at-line): New function.
	(vc-annotate-mode-map): Bind it.
	(vc-annotate-mode-menu): Add a menu entry for it.  Add :help for
	some entries.

2008-02-14  Glenn Morris  <rgm@gnu.org>

	* calendar/time-date.el (format-seconds): New function.
	(emacs-uptime): Use format-seconds.

	* Makefile.in (custom-deps, finder-data, autoloads, recompile):
	Remove `LC_ALL=C', since it's included in $(emacs) now.

2008-02-14  Zhang Wei  <id.brep@gmail.com>

	* textmodes/org-publish.el (org-publish-timestamp-filename):
	Replace colon characters in filename too.

2008-02-13  Bastien Guerry  <bzg@altern.org>

	* mail/rmail.el (rmail-header-name): New face.
	(rmail-font-lock-keywords): Use rmail-header-name.

	* mail/rmail-spam-filter.el (rsf-definitions-alist): Allow check
	against X-Spam-Status header field.
	(rmail-spam-filter): Also check X-Spam-Status header field.

2008-02-14  Mark A. Hershberger  <mah@everybody.org>
