@@ -979,31 +979,55 @@ Used in `find-file-not-found-functions'."
     ;;(define-key map [show-files]
     ;;  '("Show Files under VC" . (vc-directory t)))
     (define-key map [vc-retrieve-snapshot]
-      '("Retrieve Snapshot" . vc-retrieve-snapshot))
+      '(menu-item "Retrieve Snapshot" vc-retrieve-snapshot
+		  :help "Retrieve snapshot"))
     (define-key map [vc-create-snapshot]
-      '("Create Snapshot" . vc-create-snapshot))
-    (define-key map [vc-directory] '("VC Directory Listing" . vc-directory))
+      '(menu-item "Create Snapshot" vc-create-snapshot
+		  :help "Create Snapshot"))
+    (define-key map [vc-directory] 
+      '(menu-item "VC Directory Listing"  vc-directory
+		  :help "Show the VC status of files in a directory"))
     ;; `vc-status' is a not-quite-ready replacement for `vc-directory'
     ;; (define-key map [vc-status] '("VC Status" . vc-status))
     (define-key map [separator1] '("----"))
-    (define-key map [vc-annotate] '("Annotate" . vc-annotate))
-    (define-key map [vc-rename-file] '("Rename File" . vc-rename-file))
+    (define-key map [vc-annotate] 
+      '(menu-item "Annotate" vc-annotate
+		  :help "Display the edit history of the current file using colors"))
+    (define-key map [vc-rename-file] 
+      '(menu-item "Rename File" vc-rename-file
+		  :help "Rename file"))
     (define-key map [vc-revision-other-window]
-      '("Show Other Version" . vc-revision-other-window))
-    (define-key map [vc-diff] '("Compare with Base Version" . vc-diff))
+      '(menu-item "Show Other Version" vc-revision-other-window
+		  :help "Visit another version of the current file in another window"))
+    (define-key map [vc-diff] 
+      '(menu-item "Compare with Base Version" vc-diff
+		  :help "Compare file set with the base version"))
     (define-key map [vc-update-change-log]
-      '("Update ChangeLog" . vc-update-change-log))
-    (define-key map [vc-print-log] '("Show History" . vc-print-log))
+      '(menu-item "Update ChangeLog" vc-update-change-log
+		  :help "Find change log file and add entries from recent version control logs"))
+    (define-key map [vc-print-log] 
+      '(menu-item "Show History" vc-print-log
+		  :help "List the change log of the current file set in a window"))
     (define-key map [separator2] '("----"))
     (define-key map [vc-insert-header]
-      '("Insert Header" . vc-insert-headers))
-    (define-key map [undo] '("Undo Last Check-In" . vc-rollback))
+      '(menu-item "Insert Header" vc-insert-headers
+		  :help "Insert headers into a file for use with a version control system.
+"))
+    (define-key map [undo] 
+      '(menu-item "Undo Last Check-In" vc-rollback
+		  :help "Remove the most recent changeset committed to the repository"))
     (define-key map [vc-revert]
-      '("Revert to Base Version" . vc-revert))
+      '(menu-item "Revert to Base Version" vc-revert
+		  :help "Revert working copies of the selected file set to their repository contents"))
     (define-key map [vc-update]
-      '("Update to Latest Version" . vc-update))
-    (define-key map [vc-next-action] '("Check In/Out" . vc-next-action))
-    (define-key map [vc-register] '("Register" . vc-register))
+      '(menu-item "Update to Latest Version" vc-update
+		  :help "Update the current fileset's files to their tip revisions"))
+    (define-key map [vc-next-action] 
+      '(menu-item "Check In/Out"  vc-next-action
+		  :help "Do the next logical version control operation on the current fileset"))
+    (define-key map [vc-register] 
+      '(menu-item "Register" vc-register
+		  :help "Register file set into a version control system"))
     map))
 
 (defalias 'vc-menu-map vc-menu-map)
